--- a/styles/china.css
+++ b/styles/china.css
@@ -30,11 +30,12 @@
 
 .formulario-button {
   display: flex;
-  margin-top: 3vh;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: center;
+  margin: auto;
+  margin-top: 5vh;
+  width: 60vw;
   padding: 1rem;
-  text-align: center;
+  text-decoration: none;
   font-size: 1.2rem;
   font-family: 'Barlow', sans-serif;
   font-weight: bold;
