--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,91 @@
 /* FOOTER */
 
 .footer {
+  display: flex;
   width: 100%;
-  height: 200px;
+  height: 170px;
   margin-top: 40px;
   background-color: var(--principal);
+}
+
+.footer-redes-sociais,
+.footer-contatos {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.footer-titulo-redes-sociais,
+.footer-titulo-contatos {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: auto;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Barlow', sans-serif;
+  color: var(--branco);
+}
+
+.container-icons {
+  margin-left: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.footer-icons,
+.footer-icons-facebook {
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 20px;
+  color: var(--principal);
+  background-color: var(--branco);
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+
+.footer-icons-facebook {
+  padding-right: 13px;
+  padding-left: 13px;
+}
+
+.footer-icons:hover,
+.footer-icons-facebook:hover {
+  color: var(--secundaria);
+}
+
+.container-contatos {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 10px;
+}
+
+.contato {
+  display: flex;
+}
+
+.footer-contato-icons {
+  border-radius: 50%;
+  padding: 5px;
+  font-size: 12px;
+  border: 1px solid var(--branco);
+  color: var(--branco);
+  background-color: var(--principal);
+  transition-duration: 0.5s;
+}
+
+.footer-contato-icons:hover {
+  border-color: var(--secundaria);
+  color: var(--secundaria);
+}
+
+.contato-texto {
+  margin-left: 6px;
+  font-family: 'Barlow', sans-serif;
+  font-size: 14px;
+  color: var(--branco);
 }
