--- a/styles/index.css
+++ b/styles/index.css
@@ -17,12 +17,12 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 260px;
+  height: 320px;
   overflow-y: hidden;
 }
 
 .pais-nome {
-  padding: 5px 0;
+  padding: 10px 0;
   text-align: center;
   font-size: 1.8rem;
   font-weight: bold;
@@ -40,7 +40,7 @@
 
 .wrapper-imagens img {
   width: 100vw;
-  height: 200px;
+  height: 250px;
 }
 
 .imagens-buttons {
@@ -51,23 +51,27 @@
 .anterior-button,
 .proximo-button {
   position: absolute;
-  border: solid var(--secundaria);
-  border-width: 0 2px 2px 0;
-  padding: 6px;
+  font-size: 22px;
+  padding: 6px 9px 6px 9px;
+  opacity: 0.5;
+  border-radius: 50%;
+  background-color: var(--branco);
+  color: var(--secundaria);
   cursor: pointer;
-  z-index: 1;
+  transition-duration: 0.5s;
+}
+
+.anterior-button:hover,
+.proximo-button:hover {
+  opacity: 0.9;
 }
 
 .anterior-button {
-  left: 10px;
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
+  left: 8px;
 }
 
 .proximo-button {
-  right: 10px;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
+  right: 8px;
 }
 
 .pais-footer {
