--- a/styles/vistos.css
+++ b/styles/vistos.css
@@ -14,6 +14,7 @@
 }
 
 .container-pais {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100vw;
@@ -44,13 +45,14 @@
 }
 
 .imagens-buttons {
+  position: absolute;
   display: flex;
-  align-items: center;
+  top: 50%;
+  width: 100vw;
 }
 
 .anterior-button,
 .proximo-button {
-  position: absolute;
   font-size: 22px;
   padding: 6px 9px 6px 9px;
   opacity: 0.5;
@@ -67,11 +69,38 @@
 }
 
 .anterior-button {
-  left: 8px;
+  margin-left: 8px;
 }
 
 .proximo-button {
-  right: 8px;
+  margin-left: auto;
+  margin-right: 8px;
+}
+
+.owl-dots {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: 88%;
+  width: 100vw;
+  gap: 5px;
+}
+
+.owl-dots button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: none;
+  display: inline-block;
+  outline: none;
+  background: var(--branco);
+  margin: 0 3px;
+  transition-duration: 0.5s;
+}
+
+.owl-dots button.ativo {
+  background-color: var(--secundaria);
+  transform: translateY(-3px);
 }
 
 .pais-footer {
