--- a/styles/vistos.css
+++ b/styles/vistos.css
@@ -46,13 +46,12 @@
 
 .imagens-buttons {
   position: absolute;
-  display: flex;
   top: 50%;
-  width: 100vw;
 }
 
 .anterior-button,
 .proximo-button {
+  position: absolute;
   font-size: 22px;
   padding: 6px 9px 6px 9px;
   opacity: 0.5;
@@ -69,12 +68,11 @@
 }
 
 .anterior-button {
-  margin-left: 8px;
+  left: 2vw;
 }
 
 .proximo-button {
-  margin-left: auto;
-  margin-right: 8px;
+  left: 90vw;
 }
 
 .owl-dots {
