--- a/styles/vistos.css
+++ b/styles/vistos.css
@@ -11,6 +11,7 @@
   display: grid;
   justify-content: center;
   gap: 40px;
+  overflow: hidden;
 }
 
 .container-pais {
@@ -19,8 +20,7 @@
   flex-direction: column;
   width: 100vw;
   height: 320px;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .pais-nome {
@@ -35,9 +35,7 @@
 
 .wrapper-imagens {
   display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  
+  overflow: hidden;
 }
 
 .wrapper-imagens img {
