ajeitando o nav-menu

--- a/styles/header.css
+++ b/styles/header.css
@@ -36,7 +36,8 @@
   margin: 0;
   margin-bottom: 0;
   padding-left: 0;
-  height: 180px;
+  /* Tamanho de cada botão * quantidade de botões */
+  height: calc(36px * var(--botoes-nav-menu));
   display: none;
   flex-direction: column;
   background-color: var(--principal);
@@ -45,7 +46,7 @@
 .nav-menu a {
   width: 100%;
   /* Altura = altura nav-menu / numero de botões */
-  height: calc(180px / var(--botoes-nav-menu));
+  height: calc(calc(36px * var(--botoes-nav-menu)) / var(--botoes-nav-menu));
   color: var(--branco);
   text-decoration: none;
   cursor: pointer;
@@ -54,7 +55,7 @@
 .nav-menu li {
   width: 100%;
   /* Altura = altura nav-menu / numero de botões */
-  height: calc(180px / var(--botoes-nav-menu));
+  height: calc(calc(36px * var(--botoes-nav-menu)) / var(--botoes-nav-menu));
   display: flex;
   align-items: center;
   justify-content: center;
