--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
 .grid {
   display: grid;
   justify-content: center;
+  overflow: hidden;
 }
 
 .container-pais {
@@ -46,9 +47,9 @@
 }
 
 .anterior-button {
-  left: 0;
+  left: 10px;
 }
 
 .proximo-button {
-  right: 0;
+  right: 10px;
 }
