criando cidadanias.html

--- a/styles/geral.css
+++ b/styles/geral.css
@@ -1,6 +1,7 @@
 :root {
   --principal: #0F586C;
   --secundaria: #F38605;
+  --secundaria-mais-escura: #e47d00;
   --branco: #FFFFFF;
   --preto: #000000;
   --botoes-nav-menu: 2;
