--- a/styles/header.css
+++ b/styles/header.css
@@ -31,7 +31,7 @@
   height: 100px;
 }
 
-.nav-menu {
+.nav-menu-mobile {
   /* tamanho do nav */
   margin: 0;
   margin-bottom: 0;
@@ -43,7 +43,13 @@
   background-color: var(--principal);
 }
 
-.nav-menu a {
+.nav-menu-desktop {
+  display: none;
+  list-style: none;
+}
+
+.nav-menu-mobile a,
+.nav-menu-desktop a {
   width: 100%;
   /* Altura = altura nav-menu / numero de botões */
   height: calc(calc(36px * var(--botoes-nav-menu)) / var(--botoes-nav-menu));
@@ -52,7 +58,8 @@
   cursor: pointer;
 }
 
-.nav-menu li {
+.nav-menu-mobile li,
+.nav-menu-desktop li {
   width: 100%;
   /* Altura = altura nav-menu / numero de botões */
   height: calc(calc(36px * var(--botoes-nav-menu)) / var(--botoes-nav-menu));
@@ -60,7 +67,59 @@
   align-items: center;
   justify-content: center;
   color: var(--branco);
-  border-top: 1px solid var(--branco);
   font-family: 'Barlow', sans-serif;
   cursor: pointer;
+}
+
+.nav-menu-mobile li {
+  border-top: 1px solid var(--branco);
+}
+
+/* TABLET */
+@media screen and (min-width: 600px) {
+  
+}
+
+/* LAPTOP */
+@media screen and (min-width: 769px) {
+  .nav-icone-menu {
+    display: none;
+  }
+
+  .nav {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-logo {
+    margin-right: auto;
+    margin-left: 20px;
+  }
+
+  .nav-menu-desktop {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-right: 30px;
+  }
+
+  .nav-menu-desktop li {
+    font-size: 1.4em;
+    transition-duration: 0.5s;
+  }
+
+  .nav-menu-desktop li:hover {
+    color: var(--secundaria);
+  }
+
+}
+
+/* DESKTOP */
+@media screen and (min-width: 1025px) {
+  
+}
+
+/* GRANDES TELAS */
+@media screen and (min-width: 1200px) {
+  
 }
